[gd_scene load_steps=6 format=3 uid="uid://cie710rs2rw7i"]

[ext_resource type="Script" path="res://source/entities/traps/dart_trap_static.gd" id="1_abrpw"]
[ext_resource type="PackedScene" uid="uid://y4125uceo7v1" path="res://source/entities/traps/dart.tscn" id="2_4bq7v"]
[ext_resource type="Texture2D" uid="uid://crbfuak683yws" path="res://assets/dart_trap.png" id="3_2tr0b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2v0dv"]
size = Vector2(115, 165)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b44uf"]
size = Vector2(125, 127)

[node name="dart_trap_static" type="StaticBody2D"]
rotation = -1.1475
collision_layer = 3
collision_mask = 3
script = ExtResource("1_abrpw")
dart = ExtResource("2_4bq7v")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(10, 10)
texture = ExtResource("3_2tr0b")

[node name="trigger_area" type="Area2D" parent="."]
position = Vector2(-0.5, 0.5)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger_area"]
position = Vector2(126, -2)
shape = SubResource("RectangleShape2D_2v0dv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_b44uf")

[node name="outlet" type="Node2D" parent="."]
position = Vector2(61, 0)

[connection signal="body_entered" from="trigger_area" to="." method="_on_trigger_area_body_entered"]
[connection signal="body_exited" from="trigger_area" to="." method="_on_trigger_area_body_exited"]
